[package]
name = "x3-cross-vm-bridge"
version = "0.1.0"
authors = ["X3 Chain Core Team <core@x3-chain.io>"]
description = "X3 Chain cross-VM bridge providing atomic dual-VM operation orchestration"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]

[lib]
crate-type = ["rlib"]
