[package]
name = "x3-cross-vm-coordinator"
version = "0.1.0"
edition = "2021"
description = "Cross-VM Atomic Trade Coordinator — HTLC-based state machine for EVM ↔ SVM ↔ X3VM atomic swaps with flashloan integration"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
async-trait = "0.1"
# SECURITY: OsRng for cryptographically secure HTLC secret generation
rand = { version = "0.8", features = ["getrandom"] }

# Optional: for production persistence with substrate offchain storage
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2603", optional = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2603", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
offchain = ["sc-client-api", "sp-core"]
