[package]
name = "x3-evm-integration"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "EVM integration for X3 Chain dual-VM execution"

[dependencies]
# Substrate primitives
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

# SputnikVM — real no-std EVM interpreter
evm = { workspace = true, default-features = false }

# Frontier EVM
pallet-evm = { workspace = true, default-features = false }
fp-evm = { workspace = true, default-features = false }

# Ethereum types
ethereum = { version = "0.14", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.14", default-features = false }

# Serialization
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

# Logging
log = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "pallet-evm/std",
    "fp-evm/std",
    "ethereum/std",
    "ethereum-types/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "log/std",
    "evm/std",
]
