[package]
name = "parallel-proposer"
version = "0.1.0"
edition = "2021"
description = "Parallel block proposal with GPU-accelerated signature verification"
license = "Apache-2.0"
repository = "https://github.com/Cyptopimpinainteazy/x3-chain"
keywords = ["blockchain", "parallel", "gpu", "signature", "verification"]

[dependencies]
anyhow = "1.0"
blake3 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
rayon = "1.8"
libloading = "0.8"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"
rand = "0.8"
hex = { version = "0.4.3", default-features = false }
[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
