[package]
name = "x3-bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2603" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2603" }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "sp-std/std",
    "sp-io/std",
    "serde/std",
]
