[package]
name = "x3-rpc"
version = "0.1.0"
edition = "2021"
authors = ["X3 Chain Team"]
description = "X3 Chain RPC Server - JSON-RPC endpoints for block exploration, gas estimation, wallet operations, and DEX integration"
license = "Apache-2.0"

[dependencies]
# JSON-RPC
jsonrpc-core = { version = "18.0", default-features = false }
jsonrpc-core-client = { version = "18.0", default-features = false }
jsonrpc-derive = { version = "18.0", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Substrate RPC infrastructure
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sc-rpc-api = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
