[package]
name = "pallet-x3-jury-anchor"
version = "1.0.0"
edition = "2021"
authors = ["X3 Chain Team"]
description = "Jury blockchain anchoring pallet for X3 Chain governance"
license = "Apache-2.0"

[dependencies]
frame-benchmarking = { version = "35.0.0", default-features = false, optional = true }
frame-support = { version = "35.0.0", default-features = false }
frame-system = { version = "35.0.0", default-features = false }
pallet-timestamp = { version = "35.0.0", default-features = false }
sp-core = { version = "35.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false }
sp-runtime = { version = "35.0.0", default-features = false }
sp-std = { version = "35.0.0", default-features = false }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.0", default-features = false, optional = true }

[dev-dependencies]
sp-io = { version = "35.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "scale-info/std",
    "serde?/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
