[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"
description = "End-to-end integration tests for X3-X3-Sphere"
license = "MIT"
repository = "https://github.com/Cyptopimpinainteazy/x3-chain"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
futures = "0.3"

# Workspace dependencies
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-api = { workspace = true }
sp-consensus = { workspace = true }
sp-inherents = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sc-service = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc = { workspace = true }
sc-chain-spec = { workspace = true }
sc-transaction-pool = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
substrate-wasm-builder = { workspace = true }

# EVM dependencies
pallet-evm = { workspace = true }
fp-evm = { workspace = true }
fc-rpc = { workspace = true }
fc-db = { workspace = true }
fc-storage = { workspace = true }

# Internal dependencies
external-chains = { path = "../../crates/external-chains" }
gpu-swarm = { path = "../../crates/gpu-swarm" }
x3-evolution = { path = "../../crates/x3-evolution" }
x3-sidecar = { path = "../../crates/x3-sidecar" }
x3-dns-server = { path = "../../crates/x3-dns-server" }
cross-chain-position-manager = { path = "../../crates/cross-chain-position-manager" }
x3-integration = { path = "../../crates/x3-integration" }

[dev-dependencies]
# Add any test-specific dependencies here
rstest = "0.17"
mockall = "0.11"
httptest = "0.6"

# Added for wait_for_rpc helper
rand = "0.8"
thiserror = "1.0"

[workspace]

[[test]]
name = "integration_tests"
harness = false
